--- a/src/main/resources/design.fxml
+++ b/src/main/resources/design.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
@@ -10,10 +10,21 @@
    <children>
       <Button fx:id="buttonOpenFile" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onOpenFile" text="Open File" />
       <Button fx:id="buttonSaveFile" layoutX="14.0" layoutY="51.0" mnemonicParsing="false" onAction="#onSaveFile" prefHeight="25.0" prefWidth="66.0" text="Save File" />
-      <Button fx:id="buttonEncrypt" layoutX="520.0" layoutY="14.0" mnemonicParsing="false" onAction="#onEncrypt" prefHeight="25.0" prefWidth="66.0" text="Encrypt" />
-      <Button fx:id="buttonDecrypt" layoutX="520.0" layoutY="51.0" mnemonicParsing="false" onAction="#onDecrypt" prefHeight="25.0" prefWidth="66.0" text="Decrypt" />
-      <TextField fx:id="textInputPanel" layoutX="109.0" layoutY="14.0" prefHeight="25.0" prefWidth="370.0" />
-      <TextArea fx:id="textOutputPanel" layoutX="109.0" layoutY="51.0" prefHeight="198.0" prefWidth="370.0" />
+      <Button fx:id="buttonEncrypt" layoutX="520.0" layoutY="98.0" mnemonicParsing="false" onAction="#onEncrypt" prefHeight="25.0" prefWidth="66.0" text="Encrypt" />
+      <Button fx:id="buttonDecrypt" layoutX="520.0" layoutY="131.0" mnemonicParsing="false" onAction="#onDecrypt" prefHeight="25.0" prefWidth="66.0" text="Decrypt" />
+      <TextField fx:id="inpPaY" layoutX="221.0" layoutY="14.0" prefHeight="25.0" prefWidth="159.0" />
       <ChoiceBox fx:id="choiceBoxMeth" layoutX="14.0" layoutY="89.0" prefHeight="25.0" prefWidth="66.0" />
+      <Label layoutX="113.0" layoutY="18.0" text="y(Benaloh)" />
+      <Label layoutX="114.0" layoutY="55.0" text="r(Benaloh)" />
+      <Label layoutX="113.0" layoutY="93.0" text="n(Benaloh)" />
+      <Label layoutX="112.0" layoutY="135.0" text="p(Benaloh)" />
+      <Label layoutX="112.0" layoutY="174.0" text="q(Benaloh)" />
+      <TextField fx:id="inpPaR" layoutX="221.0" layoutY="51.0" prefHeight="25.0" prefWidth="159.0" />
+      <TextField fx:id="inpPaN" layoutX="221.0" layoutY="89.0" prefHeight="25.0" prefWidth="159.0" />
+      <TextField fx:id="inpPaP" layoutX="221.0" layoutY="131.0" prefHeight="25.0" prefWidth="159.0" />
+      <TextField fx:id="inpPaQ" layoutX="221.0" layoutY="170.0" prefHeight="25.0" prefWidth="159.0" />
+      <TextField fx:id="InpPaKey" layoutX="226.0" layoutY="256.0" prefHeight="25.0" prefWidth="159.0" />
+      <Label layoutX="112.0" layoutY="260.0" text="Key(128)(Camellia )" />
+      <Button fx:id="buttonKeygen" layoutX="520.0" layoutY="51.0" mnemonicParsing="false" onAction="#onKeygen" prefHeight="25.0" prefWidth="66.0" text="Keygen" />
    </children>
 </Pane>
